--- a/NexuSeguros/src/main/java/com/mycompany/views/contratacionesC.form
+++ b/NexuSeguros/src/main/java/com/mycompany/views/contratacionesC.form
@@ -78,6 +78,9 @@
       <SubComponents>
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI" size="12" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Usted cuenta con los siguientes seguros"/>
           </Properties>
         </Component>
